tests/unterminated_expression3.c.t.exp
unterminated_expression3.c.t:1:1: error: Unexpected }}

 }}
 ^

